fix: add flex-wrap to nav__list

--- a/src/css/components/_nav.css
+++ b/src/css/components/_nav.css
@@ -1,10 +1,13 @@
 
 .nav__list {
+  list-style: none;
+  padding: 0;
+
   display: flex;
+  flex-wrap: wrap;
   align-items: center;
   gap: 1rem;
   flex: 1 0 auto;
-  list-style: none;
 }
 
 .nav__link {
